Removing generated HTML from email templates.

--- a/templates/email-templates/forgot_password.liquid
+++ b/templates/email-templates/forgot_password.liquid
@@ -124,7 +124,7 @@ body, td { font-family: 'Helvetica Neue', Arial, Helvetica, Geneva, sans-serif; 
                                 <td class="w30" width="15"></td>
                               <td class="w470" width="470" align="left">
                                     <div align="left" class="logo__text">
-                                        <p><a href="">Bristol <br />City Council</a></p>
+                                        <p><a href="#">Bristol <br />City Council</a></p>
                                     </div>
                                 </td>
                             </tr>
@@ -143,7 +143,7 @@ body, td { font-family: 'Helvetica Neue', Arial, Helvetica, Geneva, sans-serif; 
             <table class="w325" width="350" cellpadding="0" cellspacing="0" border="0">
                 <tbody><tr><td class="w325" width="350" height="8"></td></tr>
             </tbody></table>
-            <div class="header-content"><a href="">Web Version</a><span class="hide">&nbsp;&nbsp;|&nbsp; <a href="">Update preferences</a>&nbsp;&nbsp;|&nbsp; <a href="">Unsubscribe</a></span></div>
+            <div class="header-content"><a href="#">Web Version</a><span class="hide">&nbsp;&nbsp;|&nbsp; <a href="#">Update preferences</a>&nbsp;&nbsp;|&nbsp; <a href="#">Unsubscribe</a></span></div>
             <table class="w325" width="350" cellpadding="0" cellspacing="0" border="0">
                 <tbody><tr><td class="w325" width="350" height="8"></td></tr>
             </tbody></table>
@@ -259,7 +259,7 @@ body, td { font-family: 'Helvetica Neue', Arial, Helvetica, Geneva, sans-serif; 
             <span class="hide"><p id="permission-reminder" align="left" class="footer-content-left"><span>We sent you this email about the Bristol Account that you created. We’ll only be sending you the emails you need to manage your account and won’t send any others unless you ask for them.
 <br/><br/>
 This is an automatically generated email – please do not reply to it.</span></p></span>
-            <p align="left" class="footer-content-left"><a href="">Edit your subscription</a> | <a href="">Unsubscribe</a></p>
+            <p align="left" class="footer-content-left"><a href="#">Edit your subscription</a> | <a href="#">Unsubscribe</a></p>
             </td>
             <td class="hide w0" width="60"></td>
             <td class="hide w0" width="160" valign="top">
