--- a/templates/email-templates/index.liquid
+++ b/templates/email-templates/index.liquid
@@ -129,7 +129,7 @@ body, td { font-family: HelveticaNeue, sans-serif; }
 
                                     </tbody></table>
                                     <div align="left" class="logo__text">
-                                        <p><a href="">Bristol <br />City Council</a></p>
+                                        <p><a href="#">Bristol <br />City Council</a></p>
                                     </div>
                                 </td>
                             </tr>
@@ -148,7 +148,7 @@ body, td { font-family: HelveticaNeue, sans-serif; }
             <table class="w325" width="350" cellpadding="0" cellspacing="0" border="0">
                 <tbody><tr><td class="w325" width="350" height="8"></td></tr>
             </tbody></table>
-            <div class="header-content"><a href="">Web Version</a><span class="hide">&nbsp;&nbsp;|&nbsp; <a href="">Update preferences</a>&nbsp;&nbsp;|&nbsp; <a href="">Unsubscribe</a></span></div>
+            <div class="header-content"><a href="#">Web Version</a><span class="hide">&nbsp;&nbsp;|&nbsp; <a href="#">Update preferences</a>&nbsp;&nbsp;|&nbsp; <a href="#">Unsubscribe</a></span></div>
             <table class="w325" width="350" cellpadding="0" cellspacing="0" border="0">
                 <tbody><tr><td class="w325" width="350" height="8"></td></tr>
             </tbody></table>
@@ -209,7 +209,7 @@ body, td { font-family: HelveticaNeue, sans-serif; }
                                 <td class="w580" width="580">
                                     <p align="left" class="article-title">Add a title</p>
                                     <div align="left" class="article-content">
-                                        Lorem ipsum dolor sit amet, <a href="">consectetur adipisicing</a> elit. Repellat, incidunt, fugiat, vitae tempora cupiditate recusandae illum est aspernatur mollitia labore delectus dolore aliquid dignissimos ipsa corporis iste quo quae unde tempore eligendi!
+                                        Lorem ipsum dolor sit amet, <a href="#">consectetur adipisicing</a> elit. Repellat, incidunt, fugiat, vitae tempora cupiditate recusandae illum est aspernatur mollitia labore delectus dolore aliquid dignissimos ipsa corporis iste quo quae unde tempore eligendi!
                                     </div>
                                 </td>
                             </tr>
@@ -322,7 +322,7 @@ body, td { font-family: HelveticaNeue, sans-serif; }
             <td class="w30" width="30"></td>
             <td class="w580" width="360" valign="top">
             <span class="hide"><p id="permission-reminder" align="left" class="footer-content-left"><span>You're receiving this because you subscribed from our website</span></p></span>
-            <p align="left" class="footer-content-left"><a href="">Edit your subscription</a> | <a href="">Unsubscribe</a></p>
+            <p align="left" class="footer-content-left"><a href="#">Edit your subscription</a> | <a href="#">Unsubscribe</a></p>
             </td>
             <td class="hide w0" width="60"></td>
             <td class="hide w0" width="160" valign="top">
